added docker-compose.yml and Dockerfile

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Redis": "redis:6379"
+  }, 
+  "MongoSettings": {
+    "ConnectionString": "mongodb://mongo:27017",
+    "DatabaseName": "SecondHandEcommerce"
   }
 }
