--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -10,7 +10,7 @@
     "Redis": "localhost:6379"
   },
   "MongoSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017/?replicaSet=rs0&retryWrites=false",
     "DatabaseName": "SecondHandEcommerceDb"
   }
 }
