--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,39 @@
-services:
-  redis:
-    image: redis:latest
-    ports:
-      - "6379:6379"
+version: '3.8'
 
+services:
   mongo:
     image: mongo:latest
-    container_name: mongo
+    command: [ "--replSet", "rs0" ]
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    networks:
+      - backend
+  
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    networks:
+      - backend
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5053:8080"
+    depends_on:
+      - mongo
+      - redis
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    networks:
+      - backend
 volumes:
   mongo_data:
+
+networks:
+  backend:
+    driver: bridge
